Revision history for DBD::Oracle

1.NN next release

  [MISCELLANEOUS]

  - Added a trouble shooting entry for RT71819 - bound output
    parameters may be returned in the wrong order.

1.45_00   2012-06-21

 [CHANGE IN BEHAVIOUR]

 - In future versions of DBD::Oracle ora_verbose will be changed
   so that it is simply a switch to turn DBI's DBD tracing on or off.
   A true value will turn it on and a false value will turn it off.
   DBI's "DBD" tracing was not available when ora_verbose was created
   and ora_verbose adds an additional test to every trace test.

 [BUG FIXES]

 - Fixed RT76695 - offset passed to ora_fetch_scroll should not affect
   normal fetches (Martin J. Evans)

 - Fixed RT76410 - fetch after fetch absolute always returns
   the same row (Martin J. Evans);

 - Fixed RT75721 - does not build with Oracle 9.2 (Martin J. Evans)

 - Fixed RT71343 - Oracle 9i does not have OCI_ATTR_TAF_ENABLED
   or OCI_ATTR_RESERVED_15/16 so cannot build (Martin J. Evans)

 - skip 24implicit_utf8.t if chr set is not UTF-8 (Martin J. Evans)

 - Fixed RT76269 - ora_taf_sleep was documented as taf_sleep by
   accident. There was no way to stop the TAF reconnect attempts.
   If you want to try another connect attempt in your taf handler you
   now need to return OCI_FO_RETRY from it. (Martin J. Evans)

 [MISCELLANEOUS]

 - minor change to confusing debug output for input parameters
   (Martin J. Evans)

 - RT72989 - add note to trouble shooting guide re this RT and
   Module::Runtime (Martin J. Evans)

1.44      2012-04-23
 - promote 1.43_00 to official release

1.43_00   2012-03-30

 [BUG FIXES]
 - Applied patch from Rafael Kitover (Caelum) to column_info to handle
   DEFAULT columns greater in length than the DBI default of 80. The
   DEFAULT column is a long and it is a PITA to have to set
   LongReadLen which you can only do on a connection handle in
   DBD::Oracle. The default maximum size is now 1Mb; above that you